syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/data/video";
option java_package = "ru.yandex.alice.protos.data.video";
option java_outer_classname = "VideoScenesProto";

import "mapreduce/yt/interface/protos/extension.proto";

message TVideoSearchCallArgs {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string SearchText = 1 [json_name = "search_text", (NYT.column_name) = "search_text"];
    uint32 Season = 2 [json_name = "season", (NYT.column_name) = "season"];
    uint32 Episode = 3 [json_name = "episode", (NYT.column_name) = "episode"];
    string RestrictionMode = 4 [json_name = "restriction_mode", (NYT.column_name) = "restriction_mode"];
    string RestrictionAge = 5 [json_name = "restriction_age", (NYT.column_name) = "restriction_age"];
    string SearchEntref = 6 [json_name = "search_entref", (NYT.column_name) = "search_entref"];
}
